# nexus-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/nexus_ai/: main.py
src/nexus_ai/core/: logger.py  paths.py  settings.py
src/nexus_ai/features/capture/: __init__.py  exceptions.py  models.py  service.py
src/nexus_ai/features/ocr/: __init__.py  engine.py  exceptions.py  models.py  service.py
src/nexus_ai/features/vision/: exceptions.py  image_processor.py  models.py  service.py
