[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ai"
version = "0.1.0"
description = "AI that understands your computer."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Shreyash Bhosale" }
]

dependencies = [
    "python-dotenv",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]